# frecuencias_cuda

./: CMakeLists.txt  kernel.cu  kernel_blur.cu  kernel_histograma.cu  kernel_prodint.cu  main.cpp  main_blur.cpp  main_histograma.cpp  main_prodint.cpp
